@@ -10,7 +10,7 @@ unusable \
   linux-image-2.6-footbridge \
   linux-image-2.6-iop32x \
   linux-image-2.6-ixp4xx \
-  linux-image-2.6-orion \
+  linux-image-2.6-orion5x \
   linux-image-2.6-rpc \
   linux-image-2.6-s3c2410 \
   linux-image-2.6.18-4-footbridge \
