@@ -1,11 +1,11 @@
-subarch orion
+subarch orion5x
 cpuinfo ts-109.cpuinfo
 majors 2.6
-flavour orion
-kernel-2.6 linux-image-2.6-orion
+flavour orion5x
+kernel-2.6 linux-image-2.6-orion5x
 usable \
-  linux-image-2.6-orion \
-  linux-image-2.6.25-1-orion
+  linux-image-2.6-orion5x \
+  linux-image-2.6.25-1-orion5x
 unusable \
   linux-image-2.6-iop32x \
   linux-image-2.6-netwinder \
