@@ -24,6 +24,10 @@ base-installer (1.89) UNRELEASED; urgency=low
   * Add facility to use a specific script by preseeding
     base-installer/script.
 
+  [ Martin Michlmayr ]
+  * Rename orion to orion5x to allow for support of other Orion
+    platforms in the future.
+
  -- Frans Pop <fjp@debian.org>  Mon, 17 Mar 2008 00:07:26 +0100
 
 base-installer (1.88) unstable; urgency=low
